version/0.5/_sources/api/ansys/scade/apitools/create/data_def/add_data_def_state_machine.rst.txt
ansys.scade.apitools.create.data_def.add_data_def_state_machine
===============================================================

.. py:function:: ansys.scade.apitools.create.data_def.add_data_def_state_machine(data_def: scade.model.suite.DataDef, name: str, diagram: scade.model.suite.Diagram, position: Tuple[float, float] = None, size: Tuple[float, float] = None) -> scade.model.suite.StateMachine

   
   Create a state machine in a scope.


   :Parameters:

       **data_def** : :obj:`suite.DataDef`
           Input scope, which is an operator, state, or action.

       **name** : :class:`python:str`
           Name of the state machine.

       **diagram** : :obj:`suite.Diagram`
           Diagram containing the equation. The diagram specified can be either graphical
           or textual, or it can be ``None``. However, it cannot be ``None`` if the scope
           contains at least one diagram.

       **position** : :obj:`Tuple`\[:class:`python:float`, :class:`python:float`], default: :data:`python:None`
           Position of the state machine, expressed in 1/100th of mm.
           This value is ignored if the diagram is not a graphical diagram.
           Otherwise, it must be specified.

       **size** : :obj:`Tuple`\[:class:`python:float`, :class:`python:float`], default: :data:`python:None`
           Size of the state machine, expressed in 1/100th of mm.
           This value is ignored if your diagram is not a graphical diagram.
           Otherwise, it must be specified.



   :Returns:

       :obj:`suite.StateMachine`
           ..











   ..
       !! processed by numpydoc !!
